# docs/swagger.json
@@ -422,6 +422,15 @@
                         "description": "Category ID",
                         "name": "id",
                         "in": "path"
+                    },
+                    {
+                        "description": "Category Details",
+                        "name": "categoryUpdate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateCategory"
+                        }
                     }
                 ],
                 "responses": {
@@ -1193,6 +1202,15 @@
                         "description": "Product ID",
                         "name": "id",
                         "in": "path"
+                    },
+                    {
+                        "description": "Product Details",
+                        "name": "productUpdate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateProduct"
+                        }
                     }
                 ],
                 "responses": {
@@ -1446,6 +1464,15 @@
                         "description": "User ID",
                         "name": "id",
                         "in": "query"
+                    },
+                    {
+                        "description": "User Details",
+                        "name": "userUpdate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdateUser"
+                        }
                     }
                 ],
                 "responses": {
@@ -1790,6 +1817,20 @@
                 }
             }
         },
+        "models.CommonFields": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "isDeleted": {
+                    "type": "boolean"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CreateCart": {
             "type": "object",
             "properties": {
@@ -2057,14 +2098,68 @@
                 }
             }
         },
+        "models.UpdateCategory": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "description": "Optional description",
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Name is required",
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateProduct": {
+            "type": "object",
+            "required": [
+                "name",
+                "price"
+            ],
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.UpdateUser": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "$ref": "#/definitions/models.UpdateAddress"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
                 "address": {
                     "$ref": "#/definitions/models.Address"
-                },
-                "createdAt": {
-                    "type": "string"
                 },
                 "email": {
                     "type": "string"
@@ -2075,8 +2170,8 @@
                 "id": {
                     "type": "string"
                 },
-                "isDeleted": {
-                    "type": "boolean"
+                "inline": {
+                    "$ref": "#/definitions/models.CommonFields"
                 },
                 "lastName": {
                     "type": "string"
@@ -2085,9 +2180,6 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
-                },
-                "updatedAt": {
                     "type": "string"
                 }
             }
